<resources>
    <string name="app_name">AcademIQ</string>
    <string name="welcome_to">Welcome to</string>
    <string name="sign_up">Sign up</string>
    <string name="log_in">Log In</string>
    <string name="email_hint">Email or User Name</string>
    <string name="password_hint">Password</string>
    <string name="username_hint">Enter your name</string>
    <string name="email_only_hint">Enter Email</string>
    <string name="remember_me">Remember Me</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="already_have_account">Already have an account?</string>
    <string name="dont_have_account">Don\'t have an account?</string>
    <string name="create_account">Create Account</string>
    <string name="courses">Courses</string>
    <string name="dashboard">Dashboard</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="logout">Logout</string>
    <string name="admin_panel">Admin Panel</string>
    <string name="add_course">Add Course</string>
    <string name="edit_course">Edit Course</string>
    <string name="delete_course">Delete Course</string>
    <string name="open_drawer">Open</string>
    <string name="close_drawer">Close</string>
    <string name="app_tagline">Your journey begins here. Join thousands of users already enjoying our platform.</string>
    <string name="app_logo">App Logo</string>
    <string name="or">OR</string>
    <string name="terms_privacy">By continuing, you agree to our Terms of Service and Privacy Policy</string>
    <string name="category_hint">Enter Category</string>
    <string name="amount_hint">Enter Amount</string>
    <string name="status_hint">Enter Status</string>
    <string name="due_date_hint">Enter Due Date</string>
    <string name="billing_icon">Billing icon</string>


</resources>