<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <!-- Main Navigation Group -->
    <group
        android:id="@+id/group_main"
        android:checkableBehavior="single">

        <item
            android:id="@+id/nav_dashboard"
            android:icon="@drawable/ic_dashboard"
            android:title="@string/dashboard"
            android:iconTint="@color/purple_light"/>

        <item
            android:id="@+id/nav_courses"
            android:icon="@drawable/ic_courses"
            android:title="@string/courses"
            android:iconTint="@color/purple_light"/>

        <item
            android:id="@+id/nav_grades"
            android:icon="@drawable/ic_grades"
            android:title="Grades"
            android:iconTint="@color/purple_light"/>

        <item
            android:id="@+id/nav_billings"
            android:icon="@drawable/ic_billing"
            android:title="Billings"
            android:iconTint="@color/purple_light"/>
    </group>

    <!-- Divider -->
    <item android:title="">
        <menu>
            <group
                android:id="@+id/group_secondary"
                android:checkableBehavior="single">

                <item
                    android:id="@+id/nav_settings"
                    android:icon="@drawable/ic_settings"
                    android:title="@string/settings"
                    android:iconTint="@color/purple_light"/>

                <item
                    android:id="@+id/nav_about"
                    android:icon="@drawable/ic_about"
                    android:title="@string/about"
                    android:iconTint="@color/purple_light"/>
            </group>
        </menu>
    </item>

    <!-- Logout Section (Separate) -->
    <item android:title="">
        <menu>
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_logout"
                android:title="@string/logout"
                android:iconTint="@color/purple_light"/>
        </menu>
    </item>

</menu>